--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -27,14 +27,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../listaEmpreendimento/"><strong>Empreendimentos</strong></a>
                     </li>
-                    <li class="nav-item">
+                    <!---<li class="nav-item">
                         <a class="nav-link" href="../cadUsuario/"><strong>Usuários</strong></a>
+                    </li>--->
+                    <li class="nav-item">
+                        <a class="nav-link" href="../mostrarUsuarios/"><strong>Usuários</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../mostrarUsuarios/"><strong>Lista Usuarios</strong></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>Relatórios</strong></a>
+                        <a class="nav-link" href=""><strong>Relatórios</strong></a>
                     </li>
                 </ul>
             </div>
