Atualizações visuais (BS-Icons)

--- a/appteste/templates/appteste/listaEmpreendimento.html
+++ b/appteste/templates/appteste/listaEmpreendimento.html
@@ -6,6 +6,7 @@
 
     {% load static%}
     <link href="{% static 'css/listas.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 
 </head>
 
@@ -44,7 +45,13 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td>
+                        <!--  ADICONAR BOTÃO QUE LEVA PRA PAGINA DE ADIÇÃO DE CUSTOS PARA OBRA.
+                         <button class="btn btn-round" onclick="window.location.href='{% url 'adicionar_custo' e.Codigo %}'">
+                            <i class="bi bi-plus"></i>
+                         </button>
+                        !-->
+                        </td>
                     <td></td>
                     <td>
                         <button class="btn btn-warning btn-sm">
