--- a/appteste/static/css/listas.css
+++ b/appteste/static/css/listas.css
@@ -1,40 +1,61 @@
-body{
-
+body {
+    
     background-color: #ffffff;
 
 }
 
-th{
+th {
+
     text-align: center;
+
 }
 
-td{
+td {
+
     text-align: center;
+
 }
 
-.btn-success{
+.btn-success {
 
     background-color: #1e6054;
 
 }
 
-a{
+a {
 
     color: #ffffff;
     text-decoration: none;
 
 }
 
-.btn-editar{
+.btn-editar {
 
-    text-decoration: none; 
+    text-decoration: none;
     color: #000000;
 
 }
 
-.btn-remov{
+.btn-remov {
 
-    text-decoration: none; 
+    text-decoration: none;
     color: #ffffff;
 
+}
+
+.btn-round {
+    background-color: #1e6054;
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-round i {
+    color: white;
+    font-size: 16px; /* Tamanho do ícone */
 }
