--- a/appteste/templates/appteste/manutencaoEmpreendimento.html
+++ b/appteste/templates/appteste/manutencaoEmpreendimento.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2 style="text-align: center;">CADASTRO DE EMPREENDIMENTO</h2>
-        <form method="POST" id="empreendimento" action="">
+        <form method="POST" id="empreendimento" action="{% url 'salvaEmpreendimento' %}">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="nome" class="form-label"><strong>Nome</strong></label>
@@ -18,14 +18,14 @@
             </div>
             <div>
                 <label for="descricao"><strong>Descrição</strong></label>
-                <textarea class="form-control" rows="3" type="textarea" name="descricao" id="descricao" placeholder="Descrição do empreendimento" maxlength="200" style="border-radius: 20px;"></textarea>
+                <textarea class="form-control" rows="3" type="textarea" name="descricao" id="descricao" placeholder="Descrição do empreendimento" maxlength="200" style="border-radius: 20px;" required></textarea>
             </div>
             <br>
             <div class="input-group date">
                 <span class="input-group text"><strong>Data de início e fim previstas</strong></span>
                 <input style="border-top-left-radius: 50px; border-bottom-left-radius: 50px;" type="date"
-                    class="form-control" placeholder="Data de início" id="dataini">
-                <input type="date" class="form-control" placeholder="Data de fim" id="datafim">
+                    class="form-control" placeholder="Data de início" id="dataini" name="dataInicio" required>
+                <input type="date" class="form-control" placeholder="Data de fim" id="datafim" name="dataFim" required>
             </div>
             <div class="mb-3">
                 <label for="uf" class="form-label"><strong>UF</strong></label>
@@ -47,7 +47,7 @@
                     step="0.01">
             </div>
             <div class="mb-3">
-                <input type="checkbox" class="form-check-input" id="status" checked>
+                <input type="checkbox" class="form-check-input" id="status" name="ativo" value="1" checked>
                 <label for="status" class="form-label"><strong>Ativo</strong></label>
             </div>
             <div style="text-align: center;">
