--- a/appteste/templates/appteste/listaEmpreendimento.html
+++ b/appteste/templates/appteste/listaEmpreendimento.html
@@ -48,13 +48,7 @@
                     <td>{{e.Data_inicio}}</td>
                     <td>{{e.Data_fim_prevista}}</td>
                     <td>{{e.UF}}</td>
-                    <td>{{e.Cidade}}
-                        <!--  ADICONAR BOTÃO QUE LEVA PRA PAGINA DE ADIÇÃO DE CUSTOS PARA OBRA.
-                         <button class="btn btn-round" onclick="window.location.href='{% url 'adicionar_custo' e.Codigo %}'">
-                            <i class="bi bi-plus"></i>
-                         </button>
-                        !-->
-                        </td>
+                    <td>{{e.Cidade}}</td>
                     <td>{{e.Valor_total}}</td>
                     <td>{{e.Ativo}}</td>
                     <td>
