--- a/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
+++ b/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
@@ -6,18 +6,19 @@
 
     {% load static%}
     <link href="{% static 'css/listas.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
 
 </head>
 
 <body>
-    
+
     </nav>
 
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Lista de Empreendimentos</h2>
-            <button class="btn btn-success"><a href="../cadEmpreendimento/" >Novo Empreendimento</a></button>
+            <button class="btn btn-success"><a href="../cadEmpreendimento/">Novo Empreendimento</a></button>
         </div>
 
         <div class="input-group mb-3">
@@ -36,7 +37,7 @@
                     <th style="background-color: #28A394;">Cidade</th>
                     <th style="background-color: #28A394;">Custo</th>
                     <th style="background-color: #28A394;">Status</th>
-                    <th style="background-color: #28A394; width: 15%;">Editar / Remover</th> 
+                    <th style="background-color: #28A394; width: 15%;">Editar / Remover</th>
                 </tr>
             </thead>
             </thead>
@@ -50,13 +51,23 @@
                     <td>{{e.UF}}</td>
                     <td>{{e.Cidade}}</td>
                     <td>{{e.Valor_total}}</td>
-                    <td>{{e.Ativo}}</td>
+                    <td>
+                        {% if e.Ativo %}
+                        Ativo
+                        {% else %}
+                        Inativo
+                        {% endif %}
+                    </td>
                     <td>
                         <button class="btn btn-warning btn-sm">
-                            <i class="bi bi-pencil"><strong>Editar</strong></i>
+                            <a href="{% url 'updateEmp' e.id %}" style="text-decoration: none; color: rgb(0, 0, 0);">
+                                <i class="bi bi-pencil"><strong>Editar</strong></i>
+                            </a>
                         </button>
                         <button class="btn btn-danger btn-sm">
-                            <i class="bi bi-trash"><strong>Remover</strong></i>
+                            <a href="{% url 'deleteEmp' e.id %}" style="text-decoration: none; color: white;">
+                                <i class="bi bi-trash"><strong>Remover</strong></i>
+                            </a>
                         </button>
                     </td>
                 </tr>
@@ -74,7 +85,7 @@
             </nav>
         </div>
     </div>
-{%endblock%}
+    {%endblock%}
 </body>
 
 </html>
