--- a/appteste/templates/appteste/Usuario/confirmacaoUsuario.html
+++ b/appteste/templates/appteste/Usuario/confirmacaoUsuario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirmação de Deleção de Usuário</title>
+    <title>Confirmação</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -16,14 +16,14 @@
                     <h3>Confirmar Exclusão</h3>
                 </div>
                 <div class="card-body text-center">
-                    <p class="lead">Tem certeza de que deseja deletar o usuário <strong>{{usuario.Nome}}</strong>?</p>
+                    <p class="lead">Tem certeza de que deseja deletar o usuário<strong>{{usuario.Nome}}</strong>?</p>
 
-                    <form method="POST" action="{% url 'delete' usuario.id %}">
+                    <form method="POST" action="{% url 'deleteUsuario' usuario.id %}">
                         {% csrf_token %}
                         <input type="hidden" name="user_id" value="1">
                         
                         <button type="submit" class="btn btn-danger me-2">Deletar</button>
-                        <a href="/users/" class="btn btn-secondary">Cancelar</a>
+                        <a href="../mostrarUsuarios/" class="btn btn-secondary">Cancelar</a>
                     </form>
                 </div>
             </div>
