--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -27,9 +27,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../listaEmpreendimento/"><strong>Empreendimentos</strong></a>
                     </li>
-                    <!---<li class="nav-item">
-                        <a class="nav-link" href="../cadUsuario/"><strong>Usuários</strong></a>
-                    </li>--->
                     <li class="nav-item">
                         <a class="nav-link" href="../mostrarUsuarios/"><strong>Usuários</strong></a>
                     </li>
@@ -40,7 +37,7 @@
             </div>
         </div>
     </nav>
-
+<!---Adicionar a região do usuário logado no cabeçalho-->
     {% block content %}
     {% endblock %}
 
