Criação Cadastro-Manutenção Gastos e Categorias.

--- a/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
+++ b/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
@@ -35,7 +35,7 @@
                     <th style="background-color: #28A394;">Data Final Prevista</th>
                     <th style="background-color: #28A394;">UF</th>
                     <th style="background-color: #28A394;">Cidade</th>
-                    <th style="background-color: #28A394;">Custo</th>
+                    <th style="background-color: #28A394;">Custo Previsto</th>
                     <th style="background-color: #28A394;">Status</th>
                     <th style="background-color: #28A394; width: 15%;">Editar / Remover</th>
                 </tr>
